线上环境和本地使用不同配置文件，上传路径不同；修改用户头像时给出提示, fix #1